Adding future task for unsetting proxies when they have been previously set and now they should be empty.

--- a/roles/proxy/tasks/main.yml
+++ b/roles/proxy/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 
+# TODO Unset them if they are empty and a non-empty value has been set before.
 - name: Set proxies as environment variables
   lineinfile:
     dest: .bashrc
