Using variables in include in main.yml to enhance readability.

--- a/roles/packetTracer_docker_xvfb/tasks/create_data_container.yml
+++ b/roles/packetTracer_docker_xvfb/tasks/create_data_container.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: Create xvfb_add context
-  file: path="{{ xvfb_ptadd_context }}" state=directory
+- name: "Create {{ context_path }} context"
+  file: path="{{ context_path }}" state=directory
 
 
 - name: Update and copy Dockerfile for adding PT
   template:
     src: "Dockerfile_add_pt.j2"
-    dest: "{{ xvfb_ptadd_context }}/Dockerfile"
+    dest: "{{ context_path }}/Dockerfile"
   tags:
    - template
    - copy
@@ -18,7 +18,7 @@
 - name: Copy installation file
   copy:
     src: "{{ installation_file }}"
-    dest: "{{ xvfb_ptadd_context }}/"
+    dest: "{{ context_path }}/"
   tags:
    - copy
    - files
@@ -26,7 +26,7 @@
 
 
 - name: Build docker container automatically
-  shell: "docker build --rm -t {{ docker_xvfb_ptadd_image }} {{ xvfb_ptadd_context }}"
+  shell: "docker build --rm -t {{ image_name }} {{ context_path }}"
   ignore_errors: True
   register: container_build
   tags:
@@ -36,7 +36,7 @@
 
 
 - name: Add 'packettracer' tag
-  shell: "docker tag -f {{ docker_xvfb_ptadd_image }} {{ docker_image }}"
+  shell: "docker tag -f {{ image_name }} {{ docker_image }}"
   when: include_pt and container_build.rc != 1
   tags:
    - container
@@ -48,14 +48,14 @@
   debug: msg="{{ item }}"
   when: container_build.rc == 1
   with_items:
-    - "docker build --rm -t {{ docker_xvfb_ptadd_image }} {{ xvfb_ptadd_context }}"
-    - "docker tag {{ docker_xvfb_ptadd_image }} {{ docker_image }}"
+    - "docker build --rm -t {{ image_name }} {{ context_path }}"
+    - "docker tag {{ image_name }} {{ docker_image }}"
 
 
 - name: Create data volume container
   ignore_errors: True
   register: volume_creation
-  shell: "docker create -v {{ compressed_installation_file.folders[0].original }} --name ptdata {{ docker_xvfb_ptadd_image }} echo 'Data volume'"
+  shell: "docker create -v {{ compressed_installation_file.folders[0].original }} --name ptdata {{ image_name }} echo 'Data volume'"
   tags:
    - container
    - docker
@@ -63,7 +63,7 @@
 
 
 - name: Create data volume container manually
-  debug: msg="docker create -v {{ compressed_installation_file.folders[0].original }} --name {{ data_container }} {{ docker_xvfb_ptadd_image }} echo 'Data volume'"
+  debug: msg="docker create -v {{ compressed_installation_file.folders[0].original }} --name {{ data_container }} {{ image_name }} echo 'Data volume'"
   when: volume_creation.rc == 1
 
 
