Creating file cache and mounting it on created containers.
Related: https://github.com/PTAnywhere/pt-instances-management/issues/1

--- a/roles/pt_instance_manager/tasks/app.yml
+++ b/roles/pt_instance_manager/tasks/app.yml
@@ -85,6 +85,15 @@
    - api
 
 
+- name: Create directory for storing cached files
+  file: path="{{ files_cache_path }}" state=directory
+  tags:
+   - create
+   - cache
+   - directory
+   - api
+
+
 - name: Create script to start development server
   template: src=development_start.sh.j2 dest={{ devel_script }} mode=ug+x
   tags:
