--- a/roles/pt_instance_manager/defaults/main.yml
+++ b/roles/pt_instance_manager/defaults/main.yml
@@ -11,4 +11,5 @@ devel_script: "{{home_dir}}/development_start"
 
 low_port: 39000
 high_port: 39050
+log_path: /var/log/ptinstancemanager.log
 run_script: "{{home_dir}}/start"
