Starting Packet Tracer without supervisor.
Supervisord can still be called, but not by default.

Fixes issue #7.

--- a/roles/packetTracer_docker_xvfb/tasks/build_base_image.yml
+++ b/roles/packetTracer_docker_xvfb/tasks/build_base_image.yml
@@ -29,6 +29,18 @@
    - docker
 
 
+- name: Copy Packet Tracer execution file
+  template:
+    src: "packettracer.sh.j2"
+    dest: "{{ context_path }}/packettracer.sh"
+    mode: ug+x
+  when: not install_vnc
+  tags:
+   - copy
+   - files
+   - docker
+
+
 # Problem that I have not been able to solve:
 #   https://github.com/ansible/ansible-modules-core/issues/921
 - name: Build docker container automatically
