Fixing xfce variable name.
Now, we consider that it might be provided when the role is marked as a dependency.

--- a/roles/packetTracer_docker_xfce4/defaults/main.yml
+++ b/roles/packetTracer_docker_xfce4/defaults/main.yml
@@ -1,7 +1,4 @@
 ---
 
-# docker image names
-docker_xfce_image: "packettracer_xfce"
-
-# docker building contexts
-xfce_context: "{{ docker_contexts }}/{{ docker_xfce_image }}"
+# docker building context
+xfce_context: "{{ docker_contexts }}/{{ docker_image }}"
