--- a/roles/packetTracer_docker_xfce4/tasks/main.yml
+++ b/roles/packetTracer_docker_xfce4/tasks/main.yml
@@ -43,7 +43,7 @@
 # Problem that I have not been able to solve:
 #   https://github.com/ansible/ansible-modules-core/issues/921
 - name: Build docker container automatically
-  shell: "docker build --rm -t {{ docker_xfce_image }} {{ xfce_context }}"
+  shell: "docker build --rm -t {{ docker_image }} {{ xfce_context }}"
   ignore_errors: True
   register: container_build
   tags:
@@ -54,7 +54,7 @@
 
 - name: Build docker container manually
   when: container_build.rc == 1
-  debug: msg="docker build --rm -t {{ docker_xfce_image }} {{ xfce_context }}"
+  debug: msg="docker build --rm -t {{ docker_image }} {{ xfce_context }}"
 
 
 - name: Reminders for docker usage
@@ -63,7 +63,7 @@
    - "docker images"
    - "docker inspect {{ docker_image }}"
    - "docker rmi {{ docker_image }}"
-   - "docker run -p 5901:{{ docker_vnc_port }}  -p  39000:{{ docker_pt_port }} -ti {{ docker_xfce_image }}"
+   - "docker run -p 5901:{{ docker_vnc_port }}  -p  39000:{{ docker_pt_port }} -ti {{ docker_image }}"
    - "docker ps  ( running containers )"
    - "docker ps -a  ( all containers )"
    - "docker start/stop/rm container_id"
