Defining one Supervisor program per Celery worker.
This replaces the use of "celery multi". The reason is that multi works in background and therefore Supervisor cannot handle it (e.g., stop it or know its status).

--- a/roles/pt_instance_manager/tasks/supervisor.yml
+++ b/roles/pt_instance_manager/tasks/supervisor.yml
@@ -19,8 +19,7 @@
    - supervisor
 
 
-# celery_pid_folder created as a supervisor task because it is deleted during the reboot
-- name: Create folder needed for celery workers
+- name: Create folder needed for Celery workers' logs
   file:
     path: "{{ celery_log_folder }}"
     state: directory
