Installing Flower and creating a program for it in Supervisor.
Flower won't be autostarted automatically.

--- a/roles/pt_instance_manager/defaults/main.yml
+++ b/roles/pt_instance_manager/defaults/main.yml
@@ -15,3 +15,4 @@ supervisor_socket: "/tmp/supervisor.sock"
 
 celery_app: "ptinstancemanager.app.celery"
 celery_log_folder: "/var/log/celery"
+celery_flower_port: 5554
